[gd_scene load_steps=7 format=3 uid="uid://by7g3014o582h"]

[ext_resource type="Theme" uid="uid://ccq60t47rgtuy" path="res://Themes/start_menu_theme.tres" id="1_74f6s"]
[ext_resource type="Script" uid="uid://1od2k1liweln" path="res://Scripts/admin_panel.gd" id="1_x04fo"]
[ext_resource type="Texture2D" uid="uid://cwjfettr301b2" path="res://GUI/gui icons/arrow_back_42dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.svg" id="2_x04fo"]
[ext_resource type="Theme" uid="uid://di7nwijpiuy7r" path="res://Themes/song_create_theme.tres" id="3_bg634"]
[ext_resource type="Texture2D" uid="uid://dtjmm4l2hp3jm" path="res://GUI/gui icons/restart_alt_42dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.svg" id="4_u0jvi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x04fo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x04fo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme = ExtResource("1_74f6s")
theme_override_font_sizes/font_size = 52
text = "Back"
icon = ExtResource("2_x04fo")
alignment = 0
expand_icon = true

[node name="Reload" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_bg634")
text = "Reload
"
icon = ExtResource("4_u0jvi")
alignment = 0
expand_icon = true

[node name="Search" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_74f6s")
theme_override_font_sizes/font_size = 51
placeholder_text = "Search"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Username" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
theme = ExtResource("1_74f6s")
theme_override_styles/normal = SubResource("StyleBoxFlat_x04fo")
text = "Username"

[node name="Song" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
theme = ExtResource("1_74f6s")
theme_override_styles/normal = SubResource("StyleBoxFlat_x04fo")
text = "Song"

[node name="Accuracy" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_74f6s")
theme_override_styles/normal = SubResource("StyleBoxFlat_x04fo")
text = "Accuracy"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="text_changed" from="VBoxContainer/Search" to="." method="_on_search_text_changed"]
